crates/aranya-policy-compiler/tests/data/commands/recall_statement_in_action.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unknown error
  |
2 |     recall handle()
  |     ^^^^^^^^^^^^^^^ `recall` is only valid in command `policy` blocks
